Committing draft 1 of google web page mockup

--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
 <body>
   <div id="main">
     <div id="topbar">
-      <div id="internal">
         <div id="gmail">
           <a href="https://mail.google.com" target="_blank"> Gmail </a>
         </div>
         <div id="images">
           <a href="https://www.google.co.in/imghp?hl=en&authuser=0&ogbl" target="_blank"> Images </a>
         </div>
-      </div>
     </div>
     <div id="logo">
       <div class="logo1">
@@ -21,13 +19,18 @@
       </div>
     </div>
     <div id="search">
-      <label for="searchbar">
-      <input type="text" id="searchbar"/>
-      </label>
+      <form class="form" action="/search" method="GET">
+      <div class="searchform">
+        <div class="searchbar">
+            <input type="text" id="bar"/>
+        </div>
+       <div class="buttons">
+         <button type="submit" id="searchbutton"> Search </button>
+         <button type="submit" id="luckybutton"> I'm feeling lucky </button>
+       </div>
+       </div>
+    </form>
     </div>
-    <div id="buttons">
-      <button type="submit" id="searchbutton"> Search </button>
-      <button type="submit" id="luckybutton"> I'm feeling lucky </button>
   </div>
 </body>
 </html>
